# val-mal-bot

./: .gitignore  TimeZoneLiteral.py  constants.py  git_pull.ps1  helper.py  main.py  pyproject.toml  requirements.txt  restart_bot.ps1  restart_bot.sh  restart_bot_without_pip.ps1  restart_bot_without_uv_sync.ps1  send_discord_message.py  setup.cfg  test.py  upgrade_pip_packages.py  xata_init.py
cogs/: admin.py  birthday.py  commands.py  events.py  tasks.py
controller/: __init__.py  twitch.py  twitch_chatbot.py  youtube.py
init/: __init__.py  at_client_init.py  bot_init.py  xata_init.py
models/: __init__.py  auth_response.py  channel.py  stream_info.py  stream_online_event_sub.py  subscription_info.py  user.py  user_info.py  video_info.py
models/auth/: auth_response.py
models/twitch_api_responses/: ad_schedule.py  channel.py  stream.py  subscription.py  user.py  video.py  video_info.py
models/twitch_event_subs/: channel_ad_break_begin.py  channel_chat_message.py  channel_chat_message_event_sub.py  channel_chat_notification_event_sub.py  channel_follow.py  channel_moderate.py  channel_raid.py  common.py  stream_chat_event_sub.py  stream_offline.py  stream_offline_event_sub.py  stream_online_event_sub.py
models/twitch_event_subs/common/: __init__.py  badge.py  (+2 more)
services/: __init__.py  helper.py  twitch_commands.py  twitch_service.py  twitch_shoutout_queue.py  twitch_token_manager.py
services/helper/: __init__.py  helper.py  http_client.py  parquet_cache.py  twitch.py
services/twitch/: api.py  commands.py  shoutout_queue.py  token_manager.py
val_mal_disc_bot/: main.py
views/: __init__.py  dms_open_view.py  nsfw_access_view.py  other_roles_view.py  ping_roles_view.py  pronoun_roles_view.py  rules_view.py
xata_db/: xata_init.py
