[project]
name = "val-mal-bot"
version = "1.0.0"
description = "Valin Malach's bot for Twitch/Discord"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "atproto>=0.0.63",
    "discord>=2.3.2",
    "fastapi>=0.120.0",
    "httpx[http2]>=0.28.1",
    "orjson>=3.11.4",
    "pendulum>=3.1.0",
    "polars>=1.34.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "truststore>=0.10.4",
    "types-aiofiles>=25.1.0.20251011",
    "uvicorn[standard]>=0.38.0",
    "xmltodict>=1.0.2",
]
