[project]
name = "val-mal-bot"
version = "1.0.0"
description = "Valin Malach's bot for Twitch/Discord"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "atproto>=0.0.64",
    "discord>=2.3.2",
    "fastapi>=0.135.1",
    "httpx[http2]>=0.28.1",
    "orjson>=3.11.7",
    "pendulum>=3.2.0",
    "polars>=1.39.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "truststore>=0.10.4",
    "types-aiofiles>=25.1.0.20251011",
    "uvicorn[standard]>=0.41.0",
    "xmltodict>=1.0.4",
]
