[project]
name = "val-mal-bot"
version = "1.0.0"
description = "Valin Malach's bot for Twitch/Discord"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "discord>=2.3.2",
    "fastapi>=0.135.3",
    "httpx[http2]>=0.28.1",
    "orjson>=3.11.8",
    "pendulum>=3.2.0",
    "polars>=1.39.3",
    "pydantic>=2.13.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "truststore>=0.10.4",
    "types-aiofiles>=25.1.0.20260409",
    "uvicorn[standard]>=0.44.0",
]
